--- a/root/index.html
+++ b/root/index.html
@@ -84,7 +84,7 @@
           Urednici: Matea Sukser, Vjeka Šenjug, Lucija Štanjer i Mara Zrakić
         </p>
         <p style="font-size: small">11:51, 01. travnja 2024.</p>
-        <div>
+        <div style="width:100%">
           <img
             src="images/desktop-wallpaper-chocolate-hazelnuts-sweets-chocolate-with-nuts-chocolate-concepts-milk-chocolate-dark-chocolate.jpg"
             alt="slika čokolade"
@@ -117,7 +117,7 @@
           <b>niža razina šećera</b>
           čine je zdravijom opcijom u usporedbi s mliječnom bijelom čokoladom.
         </p>
-        <div style="text-align: center">
+        <div style="text-align: center; width:100%">
           <img src="images/konzum.jpg.png" alt="konzum reklama" />
         </div>
         <p class="mb-4">
